tests/semantic_errors/andrei2_4.tl
require "ifj21"

function main()
    local id : integer = 12.89
end

main()
